<resources>
    <string name="app_name">PROGETTO_TOSA</string>
    <string name="title_home">Home</string>
    <string name="title_stepwatch">Cronometro</string>
    <string name="title_bodybuilding">Bodybuilding</string>">
    <string name="title_cardio">Cardio</string>
    <string name="title_stretching">Stretching</string>
    <string name="title_corpolibero">Corpo Libero</string>
    <string name="title_workout">Workout</string>
    <string name="exercises_label">Lista di esercizi</string>
    <string name="exercises_list_description">
    Seleziona un esercizio dalla lista
</string>
    <string name="image_cover">Cover image</string>

    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="disable_dark_mode">Disable dark mode</string>
    <string name="desc_workout_image3">Anteprima allenamento 3</string>
    <string name="desc_workout_image2">Anteprima allenamento 2</string>
    <string name="desc_workout_image4">Anteprima allenamento 4</string>

    <string name="desc_workout_image">Anteprima allenamento 1</string>

    <string name="title_account">Account</string>   <!--queste parti sono il nome che mi compare sotto l'icona nel menu-->

</resources>